--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-typescript": "6.0.0-alpha.1",
+    "through2": "^4.0.2",
     "typescript": "^4.7.2"
   }
 }
