--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ws/utils",
+  "name": "@wansers/utils",
   "version": "1.0.0",
   "private": false,
   "description": "some common function",
