--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": false,
   "description": "some common function",
   "main": "./cjs/index.js",
-  "module": "./es/index.js",
+  "module": "./es/index.min.js",
+  "browser": "./umd/index.min.js",
   "types": "./es/index.d.ts",
   "typings": "./es/index.d.ts",
   "author": "wanshengqiang <wan624773262@gmail.com>",
@@ -21,17 +22,32 @@
     "lib"
   ],
   "scripts": {
-    "build": "gulp"
+    "clean": "rimraf lib",
+    "rollup": "rollup -c",
+    "postpublish": "node scripts/postpublish.js",
+    "build": "pnpm run clean && pnpm run rollup && pnpm run postpublish"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
+    "@babel/plugin-transform-runtime": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@types/node": "^17.0.36",
     "cross-env": "^7.0.3",
-    "del": "^6.1.1",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-typescript": "6.0.0-alpha.1",
-    "through2": "^4.0.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.75.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "shelljs": "^0.8.5",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.18.3",
+    "@babel/runtime-corejs3": "^7.18.3"
   }
 }
